RESOLVED FIXED285616
Fix debug aggressive web suspension threshold preference
https://bugs.webkit.org/show_bug.cgi?id=285616
Summary Fix debug aggressive web suspension threshold preference
Ben Nham
Reported 2025-01-08 10:20:16 PST
The way that the debug aggressive web suspension threshold preference in 284306 was implemented is backwards. We should fix this.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-08 10:20:27 PST
Ben Nham
Comment 2 2025-01-08 10:23:39 PST
EWS
Comment 3 2025-01-08 11:13:26 PST
Committed 288608@main (dfc9c6de1270): <https://commits.webkit.org/288608@main> Reviewed commits have been landed. Closing PR #38733 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.