Fix debug aggressive web suspension threshold preference https://bugs.webkit.org/show_bug.cgi?id=285616 rdar://142559349

Reviewed by Ryan Reno.

The way the debug aggressive web suspension threshold preference was implemented in 287612@main is
backwards. Paradoxically, this means by default, we suspend aggressively if the system is at the
warning level but not if the system is at the critical level. Fix this.

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::shouldSuspendAggressivelyBasedOnSystemMemoryPressureStatus):

Canonical link: https://commits.webkit.org/288608@main